# CO_O2Analyzer

./: .gitignore  DATABASE_SETUP_README.md  DATA_COLLECTION_README.md  INSTALLATION.md  MEASUREMENT_SESSION_GUIDE.md  MODULE_PACKAGING_GUIDE.md  README.md  RESTRUCTURE_SUMMARY.md  USAGE.md  analyser_status.txt  build.py  check_data.py  check_tag_names.py  check_tags.py  database_analysis.md  debug_measurement_session.py  error_checker.py  examine_db.py  fix_incomplete_sessions.py  main.py  pyproject.toml  quick_recreate_db.py  recreate_database.py  requirements-dev.txt  requirements.txt  restart_data_collector.py  setup.py  setup_cx_freeze.py  start_data_collector.py  test_batch_tag_values.py  test_cleanup.py  test_config_modes.py  test_database_recreation.py  test_module.py  test_warning_flags.py
docs/: README.md
examples/: basic_usage.py  module_usage.py  settings_demo.py
src/co_o2_analyser/: __init__.py  __main__.py
src/co_o2_analyser/core/: CO_O2Analyser.py  __init__.py  analyzer.py  data_harvester.py  data_processor.py  instrument_communication.py
src/co_o2_analyser/data/: __init__.py  models.py
src/co_o2_analyser/gui/: __init__.py  graphCO_O2.py  instrument_management_dialog.py  main_gui.py  main_window.py  plot_widget.py  settings_dialog.py  status_widget.py
src/co_o2_analyser/utils/: CSVharvester.py  __init__.py  config.py  database.py  instr_simulator.py  logger.py
tests/: __init__.py  test_config.py
